# yansai2019_UMC

./: README.md
control/: CMakeLists.txt  package.xml  record.py
control/include/control/: serial.h
control/launch/: tf.launch
control/src/: MainControl.cpp
event/: CMakeLists.txt  package.xml
event/src/: getFrameMat.cpp
frame/: CMakeLists.txt  package.xml
frame/src/: main.cpp
infrared/: CMakeLists.txt  package.xml
infrared/src/: RMVideoCapture.cpp  main.cpp
raw_event_confirm/: CMakeLists.txt
raw_event_confirm/src/: main.cpp
velodyne/: CMakeLists.txt  package.xml  velodyne说明
velodyne/launch/: amcl.launch  amcl_location.launch  blam.launch  blam_velodyne.launch  cartographer.launch  global_navigation.launch  gmapping.launch  hector_slam.launch  loam_velodyne.launch  local_navigation.launch  odometry.launch  slam_navigation.launch  velodyne.launch
velodyne/maps/: cartographer-001.pgm  cartographer-001.yaml  cartographer-004-1.pgm  cartographer-004-1.yaml  cartographer-004-2.pgm  cartographer-004-2.yaml  gampping-001.yaml  gmapping-002.yaml  gmapping-003.yaml  gmapping-004.yaml  hector_slam-001.pgm  hector_slam-001.yaml  hector_slam-002.pgm  hector_slam-002.yaml  hector_slam-004.pgm  hector_slam-004.yaml
velodyne/params/blam/: blam_rates.yaml  init_pose_params.yaml  localization_params.yaml
velodyne/params/cartographer/: backpack_2d.lua
velodyne/params/local_navigation/: base_local_planner_params.yaml  global_costmap_params.yaml
velodyne/params/slam_navigation/: base_local_planner_params.yaml
velodyne/rviz/: amcl_location.rviz  blam_velodyne.rviz  cartographer.rviz  global_navigation.rviz  gmapping.rviz  hector_slam.rviz  loam_velodyne.rviz  local_navigation.rviz  slam_navigation.rviz
