<?xml version="1.0"?>
<package>
  <name>velodyne</name>
  <version>0.0.0</version>
  <description>The velodyne package</description>

  <maintainer email="lihao2015@whu.edu.cn">lihao</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/velodyne</url>
  <author email="lihao2015@whu.edu.cn">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
